--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 rmp-serde = "1.3.0"
 serde = { version = "1.0.215", features = ["derive"] }
+serde_bytes = "0.11.15"
 serde_repr = "0.1.19"
 thiserror = "2.0.3"
