--- a/vistream/Cargo.toml
+++ b/vistream/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+paste = "1.0.15"
+rmp-serde = "1.3.0"
+serde = "1.0.216"
+serde_bytes = "0.11.15"
+serde_json = "1.0.134"
 thiserror = "2.0.3"
 vistream-protocol = { version = "0.1.0", path = "../protocol" }
