--- a/vistream/Cargo.toml
+++ b/vistream/Cargo.toml
@@ -10,4 +10,5 @@ serde = "1.0.216"
 serde_bytes = "0.11.15"
 serde_json = "1.0.134"
 thiserror = "2.0.3"
+turbojpeg = "1.2.1"
 vistream-protocol = { version = "0.1.0", path = "../protocol" }
