--- a/vistream/Cargo.toml
+++ b/vistream/Cargo.toml
@@ -3,6 +3,10 @@ name = "vistream"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+ws = ["dep:tungstenite"]
+jpeg = ["dep:turbojpeg"]
+
 [dependencies]
 paste = "1.0.15"
 rmp-serde = "1.3.0"
@@ -10,5 +14,13 @@ serde = "1.0.216"
 serde_bytes = "0.11.15"
 serde_json = "1.0.134"
 thiserror = "2.0.3"
-turbojpeg = "1.2.1"
+turbojpeg = { version = "1.2.1", optional = true}
+tungstenite = { version = "0.26.1", optional = true}
+
 vistream-protocol = { version = "0.1.0", path = "../protocol" }
+# This dependency is currently not valid, since "bin" dependencies are not allowed. 
+# see RFC #3028 (https://github.com/rust-lang/cargo/issues/9096)
+# vistream-camera-server = {version = "0.1.0", path = "../camera-server"}
+
+[dev-dependencies]
+turbojpeg = "1.2.1"
